[metadata]
name = systemfixtures
summary = Test fixtures for providing fake versions of various system resources (processes, users, groups, etc.)
home-page = https://github.com/freeekanayaka/systemfixtures
description-file = README.rst
author = Free Ekanayaka
author-email = free@ekanayaka.io
license = MIT
platform = POSIX
classifier = 
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Programming Language :: Python :: 3

[files]
packages = systemfixtures

[extras]
test =
    coverage>=4.2
    python_subunit
    testrepository

[bdist_wheel]
universal = 1

[build_sphinx]
source-dir = docs/
build-dir  = docs/_build
all_files  = 1

[upload_sphinx]
upload-dir = docs/_build/html
